--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         cursor: pointer;
         margin-top: 10px;
       }
-      .reset-btn {
+      .reset-btn,
+      .autoplay-btn {
         font-size: 15px;
         padding: 10px 15px;
         cursor: pointer;
@@ -62,7 +63,7 @@
       score.losses = 0;
       score.ties = 0;
       localStorage.removeItem('score');
-      updateScoreElement();
+      // updateScoreElement();
       document.querySelector('.js-score').innerHTML = '';
       document.querySelector('.js-result').innerHTML = '';
       document.querySelector('.js-show-moves').innerHTML = '';"
@@ -70,6 +71,7 @@
     >
       Reset Score
     </button>
+    <button class="autoplay-btn" onclick="autoplay()">AutoPlay</button>
     <script>
       let score = JSON.parse(localStorage.getItem("score")) || {
         wins: 0,
@@ -88,9 +90,28 @@
         }
         return computerMove;
       }
+
+      let intervalID;
+      let isAutoPlay = false;
+
+      function autoplay() {
+        // console.log(isAutoPlay);
+
+        if (!isAutoPlay) {
+          intervalID = setInterval(function () {
+            const playerMove = pickComputerMove();
+            playGame(playerMove);
+          }, 1000);
+          isAutoPlay = true;
+        } else {
+          clearInterval(intervalID);
+          isAutoPlay = false;
+        }
+      }
+
       function playGame(playerMove) {
         const computerMove = pickComputerMove();
-        console.log(playerMove);
+        // console.log(playerMove);
 
         let result = "";
         if (playerMove === "rock") {
@@ -128,11 +149,11 @@
         }
         updateScoreElement(result, computerMove, playerMove);
         localStorage.setItem("score", JSON.stringify(score));
-        console.log(score);
+        // console.log(score);
       }
 
       function updateScoreElement(result, computerMove, playerMove) {
-        console.log(playerMove);
+        // console.log(playerMove);
 
         document.querySelector(
           ".js-score"
