--- a/index.html
+++ b/index.html
@@ -34,24 +34,13 @@
   <body>
     <h1>Rock Paper Scissors</h1>
     <span
-      ><button
-        onclick="
-      let rock = 'rock';
-      playGame(rock)"
-      >
+      ><button class="js-rock-btn">
         <img src="./rock-emoji.png" alt="" />
       </button>
-      <button
-        onclick="let paper = 'paper';
-      playGame(paper)"
-      >
+      <button class="js-paper-btn">
         <img src="./paper-emoji.png" alt="" />
       </button>
-      <button
-        onclick="
-      let scissors = 'scissors';
-      playGame(scissors)"
-      >
+      <button class="js-scissors-btn">
         <img src="./scissors-emoji.png" alt="" />
       </button>
     </span>
@@ -73,11 +62,30 @@
     </button>
     <button class="autoplay-btn" onclick="autoplay()">AutoPlay</button>
     <script>
+      document.body.addEventListener("keydown", (event) => {
+        if (event.key === "r") {
+          playGame("rock");
+        } else if (event.key === "p") {
+          playGame("paper");
+        } else if (event.key === "s") {
+          playGame("scissors");
+        }
+      });
+      document
+        .querySelector(".js-rock-btn")
+        .addEventListener("click", () => playGame("rock"));
+      document
+        .querySelector(".js-paper-btn")
+        .addEventListener("click", () => playGame("paper"));
+      document
+        .querySelector(".js-scissors-btn")
+        .addEventListener("click", () => playGame("scissors"));
       let score = JSON.parse(localStorage.getItem("score")) || {
         wins: 0,
         losses: 0,
         ties: 0,
       };
+
       function pickComputerMove() {
         const random = Math.random(0, 1);
         let computerMove = "";
@@ -98,7 +106,7 @@
         // console.log(isAutoPlay);
 
         if (!isAutoPlay) {
-          intervalID = setInterval(function () {
+          intervalID = setInterval(() => {
             const playerMove = pickComputerMove();
             playGame(playerMove);
           }, 1000);
